stop sidebar image from making page jump

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -7333,3 +7333,11 @@ button, .btn {
 	color: var(--primary) !important;
 	cursor: default;
 }
+
+
+.sidebar-img {
+	width: 100%;
+	height: 200px;
+	object-fit: contain;
+}
+
